..F....... [ZBXNEXT-6294] fixed radio element z-index

--- a/sass/stylesheets/sass/screen.scss
+++ b/sass/stylesheets/sass/screen.scss
@@ -7445,6 +7445,6 @@ z-select,
 		position: sticky;
 		top: 0;
 		background: $header-bg-color;
-		z-index: 1;
+		z-index: 3;
 	}
 }
